# memory_core

./: README.md  pyproject.toml
backend/app/: chat_engine.py  main.py  prompts.py  test.py  text_to_speech.py  tts.py  utils.py
backend/app/rag_input/: city_esg.json  edu.json
backend/app/rag_input/cwc/: mix.json
backend/app/rag_input/mel/: basic.json
frontend/public/: index.html  style.css
frontend/public/src/: main.js
frontend/public/src/visuals/: preloader.js
frontend/src/: main.js
