[project]
name = "memory-core"
version = "0.1.0"
description = ""
authors = [
    {name = "Melody Lai"}
]
readme = "README.md"
requires-python = "3.12.5"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "llama-index (>=0.14.0,<0.15.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-community (>=0.3.29,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
